[gd_scene load_steps=35 format=3 uid="uid://be4cdt0bxxe8q"]

[ext_resource type="Script" uid="uid://53wvjdmdq8yb" path="res://Entities/Chest/chest.gd" id="1_yx8lr"]
[ext_resource type="Material" uid="uid://bor1u72pbdixc" path="res://UI/Outline.tres" id="2_bfsuy"]
[ext_resource type="Texture2D" uid="uid://f0aok880wmew" path="res://assets/Image/Chests/32x32.png" id="3_bfsuy"]
[ext_resource type="Texture2D" uid="uid://cb5fh02u6w3s4" path="res://assets/Image/UI/Icons/Space.png" id="4_6sw53"]
[ext_resource type="PackedScene" uid="uid://bu3ky04tqmsk7" path="res://UI/HintUI/show_hint_ui.tscn" id="4_trab4"]
[ext_resource type="Texture2D" uid="uid://ccaj1enjwh0ya" path="res://assets/Image/Texture/Light Texture.png" id="6_62urf"]
[ext_resource type="Texture2D" uid="uid://5r43nb2h5bsu" path="res://assets/1011.png" id="7_ewdpn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yx8lr"]
atlas = ExtResource("3_bfsuy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_negw1"]
atlas = ExtResource("3_bfsuy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkhqp"]
atlas = ExtResource("3_bfsuy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gj4h"]
atlas = ExtResource("3_bfsuy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ugg"]
atlas = ExtResource("3_bfsuy")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fycln"]
atlas = ExtResource("3_bfsuy")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2kcw"]
atlas = ExtResource("3_bfsuy")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow41i"]
atlas = ExtResource("3_bfsuy")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgrx2"]
atlas = ExtResource("3_bfsuy")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r8tp"]
atlas = ExtResource("3_bfsuy")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol52f"]
atlas = ExtResource("3_bfsuy")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yotbr"]
atlas = ExtResource("3_bfsuy")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhrfb"]
atlas = ExtResource("3_bfsuy")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_negw1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx8lr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_negw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkhqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gj4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fycln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2kcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow41i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgrx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r8tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol52f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yotbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhrfb")
}],
"loop": false,
"name": &"open",
"speed": 40.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqobf"]
size = Vector2(140, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx8lr"]
size = Vector2(240, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhfup"]
atlas = ExtResource("7_ewdpn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cbqg"]
atlas = ExtResource("7_ewdpn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8p2r"]
atlas = ExtResource("7_ewdpn")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic71p"]
atlas = ExtResource("7_ewdpn")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr56e"]
atlas = ExtResource("7_ewdpn")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_332fw"]
atlas = ExtResource("7_ewdpn")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b2vl"]
atlas = ExtResource("7_ewdpn")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_r0kig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhfup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cbqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8p2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic71p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr56e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_332fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b2vl")
}],
"loop": false,
"name": &"effect",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"hide",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hmdof"]
resource_name = "open_chest"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"open"],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EpicBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"effect"],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_xjbnx"]
length = 0.001
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chest")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"idle", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EpicBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"hide", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42hde"]
_data = {
&"RESET": SubResource("Animation_xjbnx"),
&"open_chest": SubResource("Animation_hmdof")
}

[node name="Chest" type="StaticBody2D"]
collision_layer = 64
script = ExtResource("1_yx8lr")

[node name="Chest" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_bfsuy")
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_negw1")
animation = &"idle"
offset = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_eqobf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(-1, -9.5)
shape = SubResource("RectangleShape2D_yx8lr")

[node name="ShowHintUI" parent="." instance=ExtResource("4_trab4")]
offset_left = -41.0
offset_top = -151.0
offset_right = 40.0
offset_bottom = -114.0

[node name="Sprite2D" type="Sprite2D" parent="ShowHintUI"]
position = Vector2(42, 18)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_6sw53")
region_enabled = true
region_rect = Rect2(40, 104, 48, 16)

[node name="PointLight2D" type="PointLight2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -92.00001)
scale = Vector2(10, 10)
color = Color(0.73, 0.58400005, 0, 1)
energy = 0.0
texture = ExtResource("6_62urf")

[node name="EpicBeam" type="AnimatedSprite2D" parent="."]
self_modulate = Color(4.838736, 4.9172873, 0, 1)
z_index = 1
position = Vector2(0, -92.00001)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_r0kig")
animation = &"hide"
speed_scale = 1.2

[node name="open_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_42hde")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
